# Pomodorr_backend_v2

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTORS.txt  LICENSE  Makefile  README.md  babel.cfg  local.yml  pyproject.toml
pomodoro_system/: .coveragerc  .pre-commit-config.yaml  .travis.yml  Makefile  conftest.py  pyproject.toml  run_mypy.sh  run_pylint.sh  setup.cfg
pomodoro_system/foundation/: .isort.cfg  exceptions.py  i18n.py  interfaces.py  utils.py  value_objects.py
pomodoro_system/foundation/foundation/: value_objects.py
pomodoro_system/foundation/models/: __init__.py  user.py
pomodoro_system/foundation/tests/: conftest.py  factories.py  test_value_objects.py
pomodoro_system/locale/: pwl.txt
pomodoro_system/main/: __init__.py  settings_loader.py
pomodoro_system/main/main/: __init__.py
pomodoro_system/pomodoros/: .isort.cfg  __init__.py  setup.py
pomodoro_system/pomodoros/domain/: exceptions.py
pomodoro_system/pomodoros/pomodoros/: __init__.py
pomodoro_system/pomodoros/tests/: conftest.py  factories.py
pomodoro_system/pomodoros_infrastructure/: __init__.py
pomodoro_system/pomodoros_infrastructure/models/: __init__.py  date_frame.py  project.py  projectmodel.py  task.py
pomodoro_system/pomodoros_infrastructure/pomodoros_infrastructure/: __init__.py
pomodoro_system/pomodoros_infrastructure/queries/: __init__.py  pomodoros.py  projects.py  tasks.py
pomodoro_system/pomodoros_infrastructure/repositories/: __init__.py  pauses.py  pomodoros.py  projects.py  tasks.py
pomodoro_system/pomodoros_infrastructure/tests/: conftest.py  factories.py
pomodoro_system/requirements/: base.txt  dev.txt
pomodoro_system/web_app/: celery_tasks.py  commands.py  configuration.py  flask_app.py  injection.py  media_storages.py  mixins.py  security.py  settings_loader.py  utils.py
pomodoro_system/web_app/authentication/: docs.py  endpoints.py  helpers.py  marshallers.py
pomodoro_system/web_app/authorization/: decorators.py  pomodoros.py  projects.py  tasks.py  token.py  tokens.py  users.py
pomodoro_system/web_app/blueprints/: auth.py  pomodoros.py  projects.py  tasks.py  users.py
pomodoro_system/web_app/celery/: __init__.py  celery_app.py  setup.py
pomodoro_system/web_app/docs_definitions/: apispec.py  auth.py  language.py
pomodoro_system/web_app/marshallers/: date_frame_definition.py  pomodoros.py  priority.py  projects.py  tasks.py  users.py
pomodoro_system/web_app/output_boundaries/: pomodoros.py  tasks.py
pomodoro_system/web_app/serializers/: pomodoros.py  priority.py  projects.py  tasks.py  token.py
pomodoro_system/web_app/tests/: conftest.py  test_authentication.py  test_cli_commands.py  test_marshaller_fields.py  test_media_storages.py  test_pomodoros_endpoints.py  test_projects_rest_endpoints.py  test_security_datastore.py  test_task_rest_endpoints.py  test_tasks.py  test_tasks_endpoints.py  test_tasks_rest_endpoints.py  test_users_endpoints.py
(+128 files in other folders)
