[tool.poetry]
name = "pomodoro_system"
version = "0.1.0"
description = ""
authors = ["kamil559 <kamil.daniewski@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pony = "0.7.13"
psycopg2-binary = "2.8.4"
injector = "0.17.0"
typing-extensions = "3.7.4.1"
pytz = "2020.1"
python-dotenv = "0.14.0"
Flask-Injector = "0.12.3"
Flask = "1.1.1"
pytest-lazy-fixture = "0.6.3"
marshmallow = "3.8.0"
Flask-Login = "0.4.1"
Flask-JWT-Extended = "3.24.1"

[tool.poetry.dev-dependencies]
pytest = "4.6.10"
factory-boy = "3.1.0"
isort = "5.6.4"
flake8 = "3.8.3"
mypy = "0.782"
pylint = "2.6.0"
black = "20.8b1"
pytest-cov = "2.10.1"
pre-commit = "^2.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
| dist
)/
'''