[tool.poetry]
name = "Pomodorr_backend_v2"
version = "0.1.0"
description = "Pomodorr is a Pomodoro timer and task management application that will help you stay focused and motivated throughout your day-to-day work routine."
authors = ["kamil559 <kamil.daniewski@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pony = "0.7.13"
psycopg2-binary = "2.8.4"
injector = "0.17.0"
typing-extensions = "3.7.4.1"
pytz = "2020.1"
python-dotenv = "0.14.0"
Flask-Injector = "0.12.3"
Flask = "1.1.1"
marshmallow = "3.8.0"
Flask-Login = "0.4.1"
email-validator = "^1.1.1"
Flask-Mail = "^0.9.1"
bcrypt = "^3.2.0"
flask-apispec = "0.11.0"
marshmallow-dataclass = {extras = ["enum", "union"], version = "^8.1.0"}
Flask-JWT-Extended = "3.24.1"
Flask-BabelPlus = "2.2.0"
Flask-Security-Too = "^3.4.4"
redis = "^3.5.3"
flower = "0.9.4"
celery = "4.4.6"

[tool.poetry.dev-dependencies]
pytest = "^6.0.0"
factory-boy = "3.1.0"
isort = "5.6.4"
flake8 = "3.8.3"
black = "20.8b1"
pytest-cov = "2.10.1"
pre-commit = "^2.7.1"
freezegun = "^1.0.0"
msgcheck = "^3.0.0"
pytest-xdist = "^1.34.0"
pytest-lazy-fixture = "0.6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
| dist
)/
'''

[tool.pytest.ini_options]
addopts = "-n auto"
